CommandSpy: refactor spy system